--- a/src/ui/styles/index.css
+++ b/src/ui/styles/index.css
@@ -60,6 +60,25 @@
 @layer base {
   * {
     @apply border-border;
+
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: hsl(var(--background)); /* fundo igual ao background */
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: hsl(
+        var(--foreground) / 0.3
+      ); /* thumb usando foreground */
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: hsl(var(--foreground) / 0.4); /* hover mais forte */
+    }
   }
   body {
     @apply bg-background text-foreground;
